tests/neg-macros/i18677-b/Test_2.scala
//> using options -experimental -Yno-experimental

@extendFoo
class AFoo // error